--- a/Friends_Generator.ipynb
+++ b/Friends_Generator.ipynb
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "Agm7zSvWzYoX",
         "colab_type": "code",
-        "outputId": "b3ed3897-ec81-4305-b958-bd4fc0e7405d",
+        "outputId": "6c4cef28-8679-4ee4-b35b-9a2c6434c649",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -185,7 +185,7 @@
         "      \n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,10 +273,10 @@
       "metadata": {
         "id": "GxcklPI-kB19",
         "colab_type": "code",
-        "outputId": "e5b2542e-dec8-473a-9e33-02f1e646ab89",
+        "outputId": "151e985a-c8f3-41a6-9708-189b14266b18",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 119
         }
       },
       "source": [
@@ -293,16 +293,8 @@
         "net.eval()\n",
         "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 117,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading: \"https://raw.githubusercontent.com/LauJohansson/DeepLearning_NLP_Friends/master/Data/net_final_online_ToGenerator_v1.pth\" to /root/.cache/torch/checkpoints/net_final_online_ToGenerator_v1.pth\n",
-            "100%|██████████| 47.6M/47.6M [00:00<00:00, 282MB/s]\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -318,7 +310,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 117
         }
       ]
     },
@@ -345,10 +337,9 @@
         "    choices = top_ix.tolist()\n",
         "\n",
         "    #Removing \"<unk>\" from the predictions\n",
-        "    remove_unk=[\"<unk>\"]\n",
-        "    for word in list(choices):  # iterating on a copy since removing will mess things up\n",
-        "      if word in remove_unk:\n",
-        "        choices.remove(word)\n",
+        "    for word in choices[0]:  # iterating on a copy since removing will mess things up\n",
+        "      if word==vocab_to_int[\"<unk>\"]:\n",
+        "        choices[0].remove(word)\n",
         "\n",
         "    choice = np.random.choice(choices[0]) #A way to avoid always choose like \"and\" \"then\"..... \n",
         "\n",
@@ -360,6 +351,11 @@
         "\n",
         "        _, top_ix = torch.topk(output[0], k=top_k)\n",
         "        choices = top_ix.tolist()\n",
+        "        #Removing \"<unk>\" from the predictions\n",
+        "        for word in choices[0]:  # iterating on a copy since removing will mess things up\n",
+        "          if word==vocab_to_int[\"<unk>\"]:\n",
+        "            choices[0].remove(word)\n",
+        "         \n",
         "        choice = np.random.choice(choices[0])\n",
         "        words.append(int_to_vocab[choice])\n",
         "\n",
@@ -459,56 +455,72 @@
       "metadata": {
         "id": "Hsw82MiX2DTp",
         "colab_type": "code",
-        "outputId": "5536d2b1-916d-47fc-af04-0be2b1c458ed",
+        "outputId": "8a3a3ae3-5d3d-4a92-fd1f-097292c05f33",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 649
+          "height": 921
         }
       },
       "source": [
         "generate_manuscript()"
       ],
-      "execution_count": 9,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Please enter the first word of your Friends manuscript (seperate with space): chandler and the duck\n",
+            "Please enter the first word of your Friends manuscript (seperate with space): chandler and monica\n",
             "Please enter the number of words that your Friends manuscript should contain: 1000\n",
             "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 5\n",
             "\n",
             "\n",
-            "[ scene: chandler and the duck and chandler is entering with a woman . ] \n",
-            "ross: so ? \n",
-            "monica:: hey - huh , what's the hell do this matter here is that ? ! \n",
-            "joey well , it's not the best part of my stuff is just like it ! ( they both turn to the window at his face but joey is still on the table . ) \n",
-            "chandler: ( in her ear , with his mouthful in ) oh no ! no ! no ! ! no - n - ha no no . ( to joey and rachel are there for his <unk> ) ( chandler is sitting around her chair ) i mean , i - i'm - you know that you know , i think it's just the way i can do , you have to get to be here with me . \n",
-            "monica:: well you have the first day with that i can do that . i just think i'm just saying , i'm gonna be here , but it's just the <unk> that i can be with you to do this . \n",
-            "monica:: okay , okay , i - i'll be in the way i got you . \n",
-            "joey i think you're not really good ! \n",
-            "joey ( pause , and then he goes back to the table with her and he stops and sees her and he starts in pain ) oh my ! \n",
-            "chandler: ( entering ) i know what i'm going on ! i'm just a good one ! i'm sorry ! i can't tell ya , you don't want me , and you don't think you're going to have this job for the baby , and the <unk> - ( the guy walks over with his hands to his desk ) and i - and i'm - and you - we just - you're just , you're just a little , and you are , i mean i - you - you're gonna go with this guy ? ( joey nods . ) \n",
-            "chandler: i think it's a big time to see you and i just wanted it . \n",
-            "chandler: ( to phoebe again with her ) hey , you can go out and tell him about that ! \n",
-            "chandler: no . \n",
-            "monica:: i don't think you're gonna have any idea for a <unk> of <unk> ! \n",
-            "chandler: well then i just have some money . i just don't have a date for my friend , but i don't think you should be the one . \n",
-            "chandler: well what are it gonna happen about to me for the <unk> - - or ? \n",
-            "chandler: ( pause . ) i'm just a <unk> . \n",
-            "chandler: yeah . okay . \n",
-            "joey all okay , fine ! all the way i got you to get to get out . okay now you have some of the most of the sudden i ever want to say , y'know ? i just don't think about that , i just don't need to get it to you and i'm not a lot to be here ! ( pause . as they both walk over , they all get to get out the other . but the <unk> is on it as the next flashback of flashbacks to do that it is , it's the <unk> . it's a <unk> . the one from a little <unk> ! it's just like it to get out of this <unk> - <unk> <unk> <unk> , with it as a little of course it , it's not like a lot of the one . it's the <unk> - the only the <unk> - it's a one ! ( chandler starts laughing ) \n",
-            "joey i don't care what i'm gonna be with him for the rest you guys ! \n",
-            "chandler: i don't think i have to be a guy , but it's a lot to deal with it for the <unk> . ( the flashback goes . the camera is on one and joey is shocked and ross has been in the chair with his pants , in his mouth in the chair ! ) \n",
-            "chandler: ( looking at her , ) that's what i'm going ! i'm just saying that you can be the same thing , and i'm gonna get out . i don't know what to say ! ( chandler enters and walks back over to him , and joey and chandler start in a huge date . \n",
-            "monica: walks over , sees joey who catches his eyes , then then joey and rachel are on her shoulder . joey and joey look around . ) \n",
-            "monica:: hey ! \n",
-            "joey hey . ( he turns around to see chandler . chandler is shocked ) \n",
-            "chandler: oh no no ! no . i can't . \n",
-            "chandler: no - i know i know what you're doing here , i'm a man in the middle room ! ( the phone opens . joey enters with his face on her . ] \n",
-            "monica:: hi , i'm gonna be the next guy i had to do that , and you don't know how much happened on my <unk> . ( the gang is shocked . joey has a <unk> and <unk> a woman . ) \n",
-            "joey ( on his hand , with her hand ) hey , what are ya here ? ( points . chandler is stunned , joey stops and stops . and she sees chandler is shocked , she is still by the window and joey stops him on the door with her face to the duck , then the duck , and then he gets up and heads for her room . she is shocked . ) \n",
-            "monica:: you are ! ! ! [ chandler enters , \n",
-            "monica: has his hand and chandler has been on his coat with his head , which she takes the ring and the duck . chandler enters . joey walks up with his hand in front with her .\n"
+            "[ scene: chandler and \n",
+            "monica: and chandler , \n",
+            "monica: are talking . joey has to get the picture on it with a little . . he walks out with her bedroom in the hallway and starts wearing some of her face to get his hands , and he is there for his face , he turns and starts laughing at her and he sees his head . ) \n",
+            "chandler: hey , i think i should have this part for the time ! i mean , it's just , this is a good deal , y'know i think it's really good to be like you , i just don't like that ! \n",
+            "joey oh ! you are not going for a little bit for your friends ? \n",
+            "monica:: no i don't want . i am sorry . \n",
+            "joey oh yeah . \n",
+            "monica:: oh my goodness . i mean you have the first day . \n",
+            "joey i can't ! i am sorry . \n",
+            "chandler: ( entering with her room , with his mouthful of a guy and is a little - woman - - old , and - a lot about to say it - that's not like you want me for . \n",
+            "ross: well i just don't care what to tell you , but it's okay . y'know , you have no one , i don't have anything about this , and i'm sorry , and i just have been to go . ( she starts over his apartment . chandler enters ) ( he starts laughing and chandler enters with her , he is looking in the bathroom ) \n",
+            "chandler: ( entering from joey and \n",
+            "monica: , joey . ) what did i have you been here ! ( joey is wearing a little - tay , and the one in his hand , which one of it is . \" the one from the duck and joey walks out with him in the living room ) \n",
+            "ross: you guys are going on ? \n",
+            "monica:: i know . ( she starts over to find her . she goes back in a mirror ) ( he turns around to find the one of his face on the door ) i mean you don't get a good time with it and then it doesn't have the one . ( she starts the phone , the duck rings , chandler , joey . chandler , chandler and \n",
+            "monica: both look out the window , but ross and \n",
+            "monica: start laughing . ) \n",
+            "chandler: i thought we were going out . i mean we have a lot . \n",
+            "chandler: yeah ! \n",
+            "joey ( looking down in his ear in the background . joey ) i think it's the one where you said . \n",
+            "monica:: well you don't have a problem ! \n",
+            "chandler: ( pause , but she turns out the phone to reveal joey , joey is looking for the tv to find a huge face ) ( chandler walks out to chandler . ] \n",
+            "joey ( in the living ) what are the guys are talking at me ? ! \n",
+            "joey what ? ! ! \n",
+            "chandler: i know ! ( to the gang ) oh , you don't know that , you can't have a problem with me ? i am ! ( pause ) what do i mean do that , do you think you're gonna tell him what to tell me you ? ( she looks out on his hand as a woman , he turns and glares in a face ) i don't want to know , i'm so excited about it for my life , and it's a little bit of you and you have to go out , and i - i'll - i - i'll just tell you about it and you know that i would just have the most good day for my friends ! i know ! i am so glad you can have a lot of money for me and the best . \n",
+            "monica:: i am so sorry i do ! ( joey enters and walks into the bedroom , with his head . ) \n",
+            "joey oh ! ! \n",
+            "joey i can't believe you did it ! \n",
+            "chandler: well it's the way to see it . \n",
+            "joey well , it was so weird . i mean , it's a little like to be like , y'know what you said ? \n",
+            "chandler: ( to phoebe ) you have the best guy , that is the most amazing thing ! i don't think you want to go over to him , i just , but i'm not gonna have to do this to her ! ( joey is so excited , chandler is laughing ) \n",
+            "chandler: oh my , god . i don't think you want a lot , i'm not even a big one of my life ! \n",
+            "monica:: you know ! \n",
+            "chandler: i don't think i don't want that ! \n",
+            "monica:: what , i think you don't think you don't know ? \n",
+            "chandler: well i - i'm sorry about it . \n",
+            "monica:: oh ! \n",
+            "joey hey ! ( he kisses him ) \n",
+            "chandler: oh yeah ! \n",
+            "chandler: i think you know , i just had a problem . \n",
+            "joey oh , i can't believe i don't want that you have . \n",
+            "joey oh yeah ? yeah , yeah , but it was so much . \n",
+            "joey oh no ! no . i mean it doesn't mean anything to me ! i - i'm - i'm just a good - year person ! ( pause . and joey turns around ) i mean you don't know , you are not really gonna be here with me , and i - it's like a big mistake and i think you were going out of it , but it's like i was just gonna do this , y'know . and if i'm a lot better , y'know if you want me . \n",
+            "chandler: okay ? \n",
+            "chandler: okay . \n",
+            "joey okay ! \n",
+            "joey hey\n"
           ],
           "name": "stdout"
         }
