--- a/Friends_Generator.ipynb
+++ b/Friends_Generator.ipynb
@@ -366,7 +366,7 @@
         "    output=output.replace('chandler:', '\\nchandler:')\n",
         "    output=output.replace('ross:', '\\nross:')\n",
         "    output=output.replace('joey:', '\\njoey')\n",
-        "    output=output.replace('monica', '\\nmonica:')\n",
+        "    output=output.replace('monica:', '\\nmonica:')\n",
         "    output=output.replace('phoebe:', '\\nphoebe:')\n",
         "    output=output.replace('rachel:', '\\nrachel:')\n",
         "\n",
@@ -455,72 +455,76 @@
       "metadata": {
         "id": "Hsw82MiX2DTp",
         "colab_type": "code",
-        "outputId": "8a3a3ae3-5d3d-4a92-fd1f-097292c05f33",
+        "outputId": "decb8e42-6c1e-4230-846c-ff255e4b5c88",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 921
+          "height": 989
         }
       },
       "source": [
         "generate_manuscript()"
       ],
-      "execution_count": 124,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Please enter the first word of your Friends manuscript (seperate with space): chandler and monica\n",
+            "Please enter the first word of your Friends manuscript (seperate with space): rachel and ross\n",
             "Please enter the number of words that your Friends manuscript should contain: 1000\n",
             "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 5\n",
             "\n",
             "\n",
-            "[ scene: chandler and \n",
-            "monica: and chandler , \n",
-            "monica: are talking . joey has to get the picture on it with a little . . he walks out with her bedroom in the hallway and starts wearing some of her face to get his hands , and he is there for his face , he turns and starts laughing at her and he sees his head . ) \n",
-            "chandler: hey , i think i should have this part for the time ! i mean , it's just , this is a good deal , y'know i think it's really good to be like you , i just don't like that ! \n",
-            "joey oh ! you are not going for a little bit for your friends ? \n",
-            "monica:: no i don't want . i am sorry . \n",
-            "joey oh yeah . \n",
-            "monica:: oh my goodness . i mean you have the first day . \n",
-            "joey i can't ! i am sorry . \n",
-            "chandler: ( entering with her room , with his mouthful of a guy and is a little - woman - - old , and - a lot about to say it - that's not like you want me for . \n",
-            "ross: well i just don't care what to tell you , but it's okay . y'know , you have no one , i don't have anything about this , and i'm sorry , and i just have been to go . ( she starts over his apartment . chandler enters ) ( he starts laughing and chandler enters with her , he is looking in the bathroom ) \n",
-            "chandler: ( entering from joey and \n",
-            "monica: , joey . ) what did i have you been here ! ( joey is wearing a little - tay , and the one in his hand , which one of it is . \" the one from the duck and joey walks out with him in the living room ) \n",
-            "ross: you guys are going on ? \n",
-            "monica:: i know . ( she starts over to find her . she goes back in a mirror ) ( he turns around to find the one of his face on the door ) i mean you don't get a good time with it and then it doesn't have the one . ( she starts the phone , the duck rings , chandler , joey . chandler , chandler and \n",
-            "monica: both look out the window , but ross and \n",
-            "monica: start laughing . ) \n",
-            "chandler: i thought we were going out . i mean we have a lot . \n",
-            "chandler: yeah ! \n",
-            "joey ( looking down in his ear in the background . joey ) i think it's the one where you said . \n",
-            "monica:: well you don't have a problem ! \n",
-            "chandler: ( pause , but she turns out the phone to reveal joey , joey is looking for the tv to find a huge face ) ( chandler walks out to chandler . ] \n",
-            "joey ( in the living ) what are the guys are talking at me ? ! \n",
-            "joey what ? ! ! \n",
-            "chandler: i know ! ( to the gang ) oh , you don't know that , you can't have a problem with me ? i am ! ( pause ) what do i mean do that , do you think you're gonna tell him what to tell me you ? ( she looks out on his hand as a woman , he turns and glares in a face ) i don't want to know , i'm so excited about it for my life , and it's a little bit of you and you have to go out , and i - i'll - i - i'll just tell you about it and you know that i would just have the most good day for my friends ! i know ! i am so glad you can have a lot of money for me and the best . \n",
-            "monica:: i am so sorry i do ! ( joey enters and walks into the bedroom , with his head . ) \n",
-            "joey oh ! ! \n",
-            "joey i can't believe you did it ! \n",
-            "chandler: well it's the way to see it . \n",
-            "joey well , it was so weird . i mean , it's a little like to be like , y'know what you said ? \n",
-            "chandler: ( to phoebe ) you have the best guy , that is the most amazing thing ! i don't think you want to go over to him , i just , but i'm not gonna have to do this to her ! ( joey is so excited , chandler is laughing ) \n",
-            "chandler: oh my , god . i don't think you want a lot , i'm not even a big one of my life ! \n",
-            "monica:: you know ! \n",
-            "chandler: i don't think i don't want that ! \n",
-            "monica:: what , i think you don't think you don't know ? \n",
-            "chandler: well i - i'm sorry about it . \n",
-            "monica:: oh ! \n",
-            "joey hey ! ( he kisses him ) \n",
-            "chandler: oh yeah ! \n",
-            "chandler: i think you know , i just had a problem . \n",
-            "joey oh , i can't believe i don't want that you have . \n",
-            "joey oh yeah ? yeah , yeah , but it was so much . \n",
-            "joey oh no ! no . i mean it doesn't mean anything to me ! i - i'm - i'm just a good - year person ! ( pause . and joey turns around ) i mean you don't know , you are not really gonna be here with me , and i - it's like a big mistake and i think you were going out of it , but it's like i was just gonna do this , y'know . and if i'm a lot better , y'know if you want me . \n",
-            "chandler: okay ? \n",
-            "chandler: okay . \n",
+            "[ scene: rachel and ross enter with the bathroom , ross enters . and ross are there to find her a cup , and the gang who has to come in . ] \n",
+            "phoebe: oh , hey - ho , hey rach ? \n",
+            "ross: i just wanted her . \n",
+            "rachel: i was thinking of the most of those guys were having the last day . \n",
+            "ross: i don't know ! \n",
+            "ross: yeah ? \n",
+            "monica:: i think i'm going out of this . \n",
+            "phoebe: i am . ( to ross and ross are shocked , and rachel and phoebe ) \n",
+            "monica:: what ? \n",
+            "ross: oh - huh , i'm gonna be in here ! ( to ross again ) you can get it out . \n",
+            "phoebe: yeah i am so good . i mean i'm just a good person with her and i know , but y'know if you should just say , you have some kind , but then you have a lot for me and y'know i just want a date to do . \n",
+            "ross: well then i'm gonna do anything about you . \n",
+            "rachel: yeah i - i just think i would know . \n",
+            "rachel: ( laughs , and ross looks out of a little - voice , a - - a lot ! ) [ scene: central , chandler , and phoebe's are returning as joey is still in the chair . joey enters with her . she opens her door with the door and starts reading a magazine and starts wearing the phone on the floor , the door , chandler answers it , then chandler , chandler enters . joey enters the bedroom and runs over and closes his apartment . ] \n",
+            "chandler: hey - whoa . \n",
+            "chandler: ( to \n",
+            "monica: and joey . ross , chandler . \n",
+            "monica: ) hey joey and joey . \n",
+            "joey oh yeah - ho . oh - ho - ha ! \n",
+            "monica:: yeah ? ( joey turns around the bathroom to see the other table is in his chair ) \n",
+            "monica:: what ? what ? what is the matter about that i ? ! \n",
+            "joey what do they have to do that . \n",
+            "monica:: ( looking in front and joey looks at his chest . he looks out on her . but then they start back into their bedroom . chandler has to get out with a big look . ) \n",
+            "chandler: what is you gonna get the big date ! ! \n",
+            "chandler: oh - ho , it's just my best friend ! \n",
+            "joey what - why ? \n",
+            "monica:: ( to \n",
+            "monica: , joey and joey both laugh , and he is sitting in his room and starts a very passionate look at his face . joey and \n",
+            "monica: are still laughing . joey , ross , joey is looking around and stops and chandler and chandler both enter and joey glares around and chandler looks in his room . ) \n",
+            "monica:: what are the odds you do . you don't get to go ! \n",
+            "chandler: oh my gosh - no ! ! i know what happened ! ! ! \n",
+            "chandler: i know , and it would not be weird , but it's a big idea for my own . \n",
+            "monica:: oh no , i'm sorry , you're a little bit , i'm a good guy , i am just not going out for you ! i can't believe i am gonna have the rest of you and i'm not ! \n",
             "joey okay ! \n",
-            "joey hey\n"
+            "chandler: i don't care of you and me ! ( pause . joey looks at the window and stops and looks out of his face ) \n",
+            "chandler: what ? \n",
+            "chandler: well i don't care of that i don't have any more of this , so if you're going out with it . \n",
+            "chandler: well , i'm gonna be in there and get a lot to be at the same time , i don't care . ( pause ) i'm sorry i can do anything for him . i just thought you can do anything for me . \n",
+            "chandler: oh no . \n",
+            "joey no . i can't ! \n",
+            "joey no . \n",
+            "chandler: oh yeah ? \n",
+            "monica:: i mean i'm going in here for you ! \n",
+            "chandler: ( entering from his bedroom and the door is sitting around the bathroom and chandler is shocked ) hi , i'm a good guy . \n",
+            "joey oh , yeah . ( she goes back over to his room and stops him and he turns around and starts making up and stops him on the couch , and the door starts making him out with her and chandler is wearing her face and the rest . joey is shocked . chandler enters with the duck . chandler enters , carrying his eyes on his chair and runs back and sits in front with him ) \n",
+            "monica:: what is this going on , what is that you doing this ? \n",
+            "joey what happened ? \n",
+            "joey well i just got it ! \n",
+            "monica:: oh my god . \n",
+            "chandler: i know that was a little good . \n",
+            "monica:: yeah i think i can . ( pause and he turns out and starts a huge laugh , joey , joey , who , and joey are laughing at each other for a second , but the chick , and chandler and the girls start to get the one to stop it . chandler starts a big time to the one . joey is in pain and joey has been on a chair to the same side , the rest , the next time and chandler gets out , and joey is looking for him . he tries a lot of it , then he doesn't see the face and then she starts in a few of a face and the one , then he tries it to get a ball , but the rest of his head in , the one of them . the duck is in front by chandler\n"
           ],
           "name": "stdout"
         }
