--- a/Friends_Generator.ipynb
+++ b/Friends_Generator.ipynb
@@ -185,7 +185,7 @@
         "      \n",
         "\n"
       ],
-      "execution_count": 115,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +293,7 @@
         "net.eval()\n",
         "\n"
       ],
-      "execution_count": 117,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
       },
       "source": [
         "def get_init_words():\n",
-        "  initial_words = input(\"Please enter the first word of your Friends manuscript (seperate with space): \")\n",
+        "  initial_words = input(\"Please enter the first words of your Friends manuscript (seperate with space): \")\n",
         "  inital_words=initial_words.lower()\n",
         "  initial_words=initial_words.split()\n",
         "  initial_words=['[','scene:'] + initial_words\n",
@@ -464,7 +464,7 @@
       "source": [
         "generate_manuscript()"
       ],
-      "execution_count": 125,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
